# biome-tailwind-sorter

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  jest.config.js  package-lock.json  package.json  test-cursor.html  test.html  tsconfig.json
.github/workflows/: ci.yml  release.yml  vscode-extension.yml
benches/: performance.rs
examples/: biome.json  html-example.html  react-component.tsx  vue-component.vue
extension/: extension.ts
src/: biome-plugin.ts  class-extractor.ts  class_extractor.rs  cli.ts  config.rs  formatter.rs  index.ts  lib.rs  main.rs  tailwind-formatter.ts  tailwind-order.ts  tailwind_order.rs  use-sorted-classes-rule.ts
src/__tests__/: class-extractor.test.ts  tailwind-order.test.ts
tests/: cli_integration.rs
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  icon-placeholder.md  package-lock.json  package.json  webpack.config.js
vscode-extension/src/: extension.ts
