[package]
name = "biome-tailwind-sorter"
version = "0.2.7"
edition = "2021"
description = "A Biome plugin and formatter for sorting Tailwind CSS classes according to official order"
authors = ["Rizky Viali"]
license = "MIT"
repository = "https://github.com/rizkyviali/biome-tailwind-sorter.git"
homepage = "https://github.com/rizkyviali/biome-tailwind-sorter#readme"
keywords = ["biome", "tailwind", "css", "formatter", "linter"]

[[bin]]
name = "biome-tailwind-sorter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"